--- a/jobs/grootfs-bench/templates/performance_test.erb
+++ b/jobs/grootfs-bench/templates/performance_test.erb
@@ -1,16 +1,17 @@
 #!/bin/bash
 
 JOB_DIR=$(dirname $0)
+STORE_DIR=/var/vcap/data/grootfs/store
 source ${JOB_DIR}/../env
 
 echo "Warming up cache..."
-grootfs --store <%= p("grootfs.store_path") %> create <%= p("grootfs-bench.image_name") %> my-warm-box &> /dev/null
+grootfs --store $STORE_DIR create <%= p("grootfs-bench.image_name") %> my-warm-box &> /dev/null
 
 echo "Running benchmark..."
 grootfs-bench-reporter \
   --mode runner \
   --benchBinPath /var/vcap/packages/grootfs-bench/bin/grootfs-bench \
-  [--store <%= p("grootfs.store_path") %> \
+  [--store $STORE_DIR \
   --concurrency <%= p("grootfs-bench.concurrency") %> \
   --bundles <%= p("grootfs-bench.bundles") %> \
   --image <%= p("grootfs-bench.image_name") %> \
