--- a/jobs/grootfs-bench/templates/run.erb
+++ b/jobs/grootfs-bench/templates/run.erb
@@ -1,4 +1,9 @@
 #!/bin/bash
 
 BIN_DIR=$(dirname $0)
-su vcap -c ${BIN_DIR}/performance_test
+MAXIMUS_USER=$(/var/vcap/packages/idmapper/bin/maximus)
+
+export HOME=/tmp
+chmod 777 $HOME
+
+su -u \#${MAXIMUS_USER} -c ${BIN_DIR}/performance_test
