Property to enable metric emission from grootfs
Signed-off-by: Claudia Beresford <cberesford@pivotal.io>

--- a/jobs/grootfs-bench/templates/performance_test.erb
+++ b/jobs/grootfs-bench/templates/performance_test.erb
@@ -15,6 +15,7 @@ echo "Running benchmark..."
     --benchBinPath /var/vcap/packages/grootfs-bench/bin/grootfs-bench \
     [--store $STORE_DIR \
     --driver <%= p("grootfs.driver") %> \
+    --enable-groot-metrics <%= p("grootfs-bench.enable_groot_metrics") %> \
     --concurrency <%= p("grootfs-bench.concurrency") %> \
     --images <%= p("grootfs-bench.images") %> \
     --base-image <%= p("grootfs-bench.base_image_name") %> \
